--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "format": "prettier --write \"src/**/*.{ts,html,scss}\""
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.3.9",
+    "@angular/animations": "^17.3.9",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "17.3.9",
     "@angular/compiler": "17.3.9",
     "@angular/core": "17.3.9",
     "@angular/forms": "17.3.9",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "17.3.9",
     "@angular/platform-browser-dynamic": "17.3.9",
     "@angular/router": "17.3.9",
@@ -32,12 +36,20 @@
     "@angular/compiler-cli": "17.3.9",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "angular-eslint": "19.0.2",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jasmine-core": "~3.10.0",
+    "jasmine-marbles": "^0.9.2",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "5.3.3"
+    "prettier": "^3.4.2",
+    "prettier-eslint": "^16.3.0",
+    "typescript": "5.3.3",
+    "typescript-eslint": "8.18.0"
   }
 }
