--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:coverage": "ng test --code-coverage",
     "lint": "ng lint",
     "format": "prettier --write \"src/**/*.{ts,html,scss}\""
   },
