--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@angular/animations": "^17.3.9",
     "@angular/cdk": "^17.3.10",
+    "@angular/cli": "^19.0.5",
     "@angular/common": "17.3.9",
     "@angular/compiler": "17.3.9",
     "@angular/core": "17.3.9",
